Make sure building software is really REALLY necessary :)

--- a/mermaid.css
+++ b/mermaid.css
@@ -254,6 +254,9 @@ text.actor {
 
 
 */
+.node {
+  text-align: center;
+}
 .node text {
   font-family: 'trebuchet ms', verdana, arial;
   font-size: 14px;
